--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>夕飯なに食べよかな？(^Q^)</title>
 <link rel="stylesheet" href="haikei.css">
-<link rel="shortcut icon" href="/image/profileicon.png" type="image/png">
+<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 </head>
 
 <body>
