サイトの修正

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 <script src="yuhan.js"></script>
 
-<img src="image/off.png" onmousedown="this.src='image/on.png'" onmouseup="this.src='image/off.png'"  onclick="myRndLink()" >
+<img src="image/off.png" onmousedown="this.src='image/on.png'" onmouseup="this.src='image/off.png'" onmouseout="this.src='image/off.png' " onclick="myRndLink()" >
 
 <div id="tweet-area">
 	<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
@@ -25,7 +25,7 @@
 <div id="setsumei">
 <h1>説明</h1>
 </div>
-<h3>ボタンを押すとランダムに料理の検索結果に飛びます。<br> そんなサイトです。
+<h3>ボタンを押すとランダムに料理のサイトに飛びます。<br>
 </h3>
 <span class="setsumei">
 <h2>こんなときにボタンを押します。</h2>
